--- a/main/res/drawable/marker_rating_d_0.xml
+++ b/main/res/drawable/marker_rating_d_0.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="13"
     android:viewportHeight="13">
     <path
-        android:pathData="m6.5,6.5 l0,6.5 -2.0086,-0.3181z"
+        android:pathData="m6.125 6.5v6.125l-1.885-0.32356z"
         android:fillColor="@color/marker_rating_0" />
 </vector>
