--- a/main/res/drawable/marker_rating_d_10.xml
+++ b/main/res/drawable/marker_rating_d_10.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="13"
     android:viewportHeight="13">
   <path
-      android:pathData="m6.5,6.5v6.5l-2.0086,-0.3181 -1.812,-0.9233z"
+      android:pathData="m6.125 6.5v6.125l-1.885-0.32356-1.7005-0.86644z"
       android:fillColor="@color/marker_rating_10" />
 </vector>
