--- a/main/res/drawable/marker_rating_d_40.xml
+++ b/main/res/drawable/marker_rating_d_40.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="13"
     android:viewportHeight="13">
   <path
-      android:pathData="m6.5,6.5v6.5l-2.0086,-0.3181 -1.812,-0.9233 -1.438,-1.438 -0.9233,-1.812 -0.3181,-2.0086 0.3181,-2.0086 0.9233,-1.812 1.438,-1.438z"
+      android:pathData="m6.125 6.5v6.1l-1.885-0.29856-1.7005-0.86644-1.3495-1.3495-0.86644-1.7005-0.29856-1.885 0.29856-1.885 0.86644-1.7005 1.3495-1.3495z"
       android:fillColor="@color/marker_rating_40" />
 </vector>
