--- a/main/res/drawable/marker_rating_t_50.xml
+++ b/main/res/drawable/marker_rating_t_50.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="13"
     android:viewportHeight="13">
   <path
-      android:pathData="m6.5,6.5v-6.5l2.0086,0.3181 1.812,0.9233 1.438,1.438 0.9233,1.812 0.3181,2.0086 -0.3181,2.0086 -0.9233,1.812 -1.438,1.438 -1.812,0.9233 -2.0086,0.3181z"
+      android:pathData="m6.875 6.5v-6.1l1.885 0.29856 1.7005 0.86644 1.3495 1.3495 0.86644 1.7005 0.29856 1.885-0.29856 1.885-0.86644 1.7005-1.3495 1.3495-1.7005 0.86644-1.885 0.32356z"
       android:fillColor="@color/marker_rating_50" />
 </vector>
