--- a/main/res/layout/waypoint_item.xml
+++ b/main/res/layout/waypoint_item.xml
@@ -10,13 +10,18 @@
     android:longClickable="true"
     android:orientation="vertical"
     android:paddingTop="9dp"
-    tools:context=".CacheDetailActivity$WaypointsViewCreator$1" >
+    tools:context=".CacheDetailActivity$WaypointsViewCreator" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:descendantFocusability="blocksDescendants"
         android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <ImageView
             android:id="@+id/text_icon"
@@ -26,8 +31,24 @@
             android:layout_marginRight="4dip"
             android:scaleType="fitXY"
             android:gravity="left|top"
+            android:layout_gravity="center_horizontal"
             android:visibility="visible"
             tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/calculated_coordinates_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dip"
+            android:layout_marginRight="4dip"
+            android:scaleType="fitXY"
+            android:gravity="left|top"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_menu_calculate"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
