D/T markers on cache icons (#12321)

--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -111,6 +111,7 @@
     <string translatable="false" name="pref_brouterProfileBike">brouterProfileBike</string>
     <string translatable="false" name="pref_brouterProfileCar">brouterProfileCar</string>
     <string translatable="false" name="pref_bigSmileysOnMap">pref_bigSmileysOnMap</string>
+    <string translatable="false" name="pref_dtMarkerOnCacheIcon">pref_dtMarkerOnCacheIcon</string>
     <string translatable="false" name="pref_proximityNotificationGeneral">pref_proximityNotificationGeneral</string>
     <string translatable="false" name="pref_proximityNotificationSpecific">pref_proximityNotificationSpecific</string>
     <string translatable="false" name="pref_proximityDistanceFar">pref_proximityDistanceFar</string>
