--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -72,4 +72,15 @@
     <color name="dotBg_waypointOutline">#ff999999</color>
     <color name="dotBg_waypointBg">#ffffffff</color>
 
+    <color name="marker_rating_0">@color/cacheMarker_background</color>
+    <color name="marker_rating_5">#ff388E3C</color>
+    <color name="marker_rating_10">#ff388E3C</color>
+    <color name="marker_rating_15">#ff388E3C</color>
+    <color name="marker_rating_20">#ff689f38</color>
+    <color name="marker_rating_25">#ff9e9d24</color>
+    <color name="marker_rating_30">#ffffa000</color>
+    <color name="marker_rating_35">#fff57c00</color>
+    <color name="marker_rating_40">#ffef6c00</color>
+    <color name="marker_rating_45">#ffe64a19</color>
+    <color name="marker_rating_50">#ffd32f2f</color>
 </resources>
