add import from bookmarks to cache list activity (fix #12325)

--- a/main/res/menu/cache_list_options.xml
+++ b/main/res/menu/cache_list_options.xml
@@ -149,7 +149,10 @@
         <menu>
             <item
                 android:id="@+id/menu_import_pq"
-                android:title="@string/pq_download_and_import"/>
+                android:title="@string/menu_lists_pocket_queries"/>
+            <item
+                android:id="@+id/menu_bookmarklists"
+                android:title="@string/menu_lists_bookmarklists"/>
             <item
                 android:id="@+id/menu_import_gpx"
                 android:title="@string/gpx_import_title"/>
