--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -84,7 +84,7 @@
     <string translatable="false" name="pref_plainLogs">plainLogs</string>
     <string translatable="false" name="pref_signature">signature</string>
     <string translatable="false" name="pref_fakekey_category_logTemplate">fakekey_category_logTemplate</string>
-    <string translatable="false" name="pref_logTemplates">pref_logTemplates</string>
+    <string translatable="false" name="pref_logTemplates">logTemplates</string>
     <string translatable="false" name="pref_sigautoinsert">sigautoinsert</string>
     <string translatable="false" name="pref_offlinelogs_homescreen">offlinelogs_homescreen</string>
     <string translatable="false" name="pref_trackautovisit">trackautovisit</string>
