--- a/main/res/layout/waypoint_item.xml
+++ b/main/res/layout/waypoint_item.xml
@@ -121,8 +121,7 @@
             android:id="@+id/wpDefaultNavigation"
             android:layout_width="@dimen/buttonSize_iconButton"
             android:layout_height="@dimen/buttonSize_iconButton"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="false"
+            android:layout_marginRight="12dip"
             android:layout_gravity="right"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:clickable="true"
