--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -83,4 +83,13 @@
     <color name="marker_rating_40">#ffef6c00</color>
     <color name="marker_rating_45">#ffe64a19</color>
     <color name="marker_rating_50">#ffd32f2f</color>
+
+    <color name="attribute_category_tools">#ffb71c1c</color>
+    <color name="attribute_category_tools_negative">#ff000000</color>
+    <color name="attribute_category_type">#ff5d4037</color>
+    <color name="attribute_category_location">#ff2e7d32</color>
+    <color name="attribute_category_duration">#ff1565c0</color>
+    <color name="attribute_category_surroundings">#ff455a64</color>
+    <color name="attribute_category_transport">#ff000000</color>
+    <color name="attribute_strikethrough">#ffb71c1c</color>
 </resources>
