--- a/main/res/values-night/colors_dark.xml
+++ b/main/res/values-night/colors_dark.xml
@@ -19,4 +19,12 @@
 
     <color name="colorSeparator">#44FFFFFF</color>
 
+    <color name="attribute_filter_disabled">#ffa6a6a6</color>
+    <color name="attribute_category_tools_disabled">#ff340e0e</color>
+    <color name="attribute_category_duration_disabled">#ff0e1932</color>
+    <color name="attribute_category_location_disabled">#ff162a18</color>
+    <color name="attribute_category_type_disabled">#ff251e1c</color>
+    <color name="attribute_category_surroundings_disabled">#ff1d2123</color>
+    <color name="attribute_category_transport_disabled">#ff212121</color>
+
 </resources>
