fix errors + add warning for unsupported regions

--- a/main/res/menu/map_activity.xml
+++ b/main/res/menu/map_activity.xml
@@ -168,7 +168,7 @@
     </item>
     <item
         android:id="@+id/menu_check_routingdata"
-        android:title="@string/check_tiles_missing" />
+        android:title="@string/check_tiles_menu" />
     <item
         android:id="@+id/menu_as_list"
         android:icon="@drawable/ic_menu_list"
