--- a/main/res/layout/coordinatescalculateglobal_dialog.xml
+++ b/main/res/layout/coordinatescalculateglobal_dialog.xml
@@ -31,13 +31,30 @@
                 android:text="Experimental New Feature"
                 />
 
-            <Spinner
-                android:id="@+id/spinnerCoordinateFormats"
+            <RelativeLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/cc_switch_guided"
+                android:layout_width="wrap_content"
+                android:layout_height="38dp"
+                android:layout_alignParentLeft="true"
+                android:layout_margin="6dp"
+                android:layout_centerVertical="true"
+                android:text="Guided Mode" />
+
+            <Spinner
+                android:id="@+id/cc_guided_format"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_toRightOf="@id/cc_switch_guided"
+                android:layout_centerVertical="true"
                 tools:listitem="@android:layout/simple_spinner_item" />
+
+            </RelativeLayout>
 
             <!-- 'Plain' input -->
             <LinearLayout
@@ -58,13 +75,13 @@
                     <EditText
                         android:id="@+id/PlainLon"
                         style="@style/textinput_embedded"
-                        android:inputType="text|textCapCharacters"
+                        android:inputType="text"
                         android:hint="@string/longitude" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
             <!-- 'Non-Plain' input -->
-            <cgeo.geocaching.ui.CoordinatesCalculateGrid
+            <cgeo.geocaching.ui.CalculatedCoordinateInputGuideView
                 android:id="@+id/NonPlainFormat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
