--- a/main/res/layout/calculatedcoordinate_input_guide.xml
+++ b/main/res/layout/calculatedcoordinate_input_guide.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.CalculatedCoordinateInputGuideView">
 
@@ -12,14 +11,31 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
         <com.google.android.material.textfield.TextInputLayout style="@style/textinput_edittext"
-            android:id="@+id/cc_guide_value_layout">
+            android:id="@+id/cc_guide_value_layout"
+            android:layout_centerInParent="true">
             <EditText
                 android:id="@+id/cc_guide_value"
                 style="@style/textinput_embedded"
                 android:textSize="@dimen/textSize_detailsPrimary"
                 android:singleLine="true"
-                android:inputType="text" />
+                android:inputType="text"
+                android:hint="Value"/>
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/cc_guide_value_hiddenhint"
+            style="@style/text_label"
+            android:visibility="invisible"
+            android:text="Tap a digit to edit"
+            android:textSize="@dimen/textSize_headingPrimary"
+            android:singleLine="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
 </merge>
