--- a/main/res/layout/coordinates_input_dialog.xml
+++ b/main/res/layout/coordinates_input_dialog.xml
@@ -1,10 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scroller"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    tools:context=".ui.dialog.CoordinatesInputDialog" >
+    tools:context=".ui.dialog.CoordinatesInputDialog">
 
     <LinearLayout
         android:id="@+id/scroller_child"
@@ -43,6 +44,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="NEW Calculate Coordinates"
+            app:icon="@drawable/ic_menu_variable"
             android:visibility="gone" />
 
         <Button
