fix #12572: handle strange DMM formats

--- a/main/res/layout/waypoint_item.xml
+++ b/main/res/layout/waypoint_item.xml
@@ -111,6 +111,7 @@
                 android:textColor="@color/colorText_listsPrimary"
                 android:visibility="gone"
                 android:text="@string/waypoint_calculated_coordinates"
+                android:textStyle="italic"
                 tools:visiblity="visible" />
 
             <TextView
