rel to #12384: first version of waypoint generator from variable ranges

--- a/main/res/layout/coordinatescalculateglobal_dialog.xml
+++ b/main/res/layout/coordinatescalculateglobal_dialog.xml
@@ -173,6 +173,13 @@
                 android:text="Convert to plain coordinate" />
 
             <Button
+                android:id="@+id/generate_range_coordinates"
+                style="@style/button_full"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Generate Range coordinates" />
+
+            <Button
                 android:id="@+id/done"
                 style="@style/button_full"
                 android:layout_width="match_parent"
