--- a/main/res/xml/preferences_navigation.xml
+++ b/main/res/xml/preferences_navigation.xml
@@ -58,10 +58,9 @@
             android:summary="@string/init_updateinterval_description"
             app:allowDividerBelow="false"
             app:iconSpaceReserved="false"/>
-        <cgeo.geocaching.settings.SeekbarPreference
+        <cgeo.geocaching.settings.SeekbarPreference0Off
             android:key="@string/pref_brouterAutoTileDownloadsInterval"
             android:defaultValue="@integer/brouter_updateinterval_default"
-            app:min="0"
             app:max="@integer/brouter_updateinterval_max"
             app:iconSpaceReserved="false" />
 
