--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -154,6 +154,7 @@
     <string translatable="false" name="preference_screen_appearance">preference_screen_appearance</string>
     <!-- ============================================================================================================================================================================== -->
     <string translatable="false" name="pref_theme_setting">theme_setting</string>
+    <string translatable="false" name="pref_wallpaper">wallpaper</string>
     <string translatable="false" name="pref_showaddress">showaddress</string>
     <string translatable="false" name="pref_plainLogs">plainLogs</string>
     <string translatable="false" name="pref_selected_language">selectedLanguage</string>
