--- a/main/res/xml/preferences_appearence.xml
+++ b/main/res/xml/preferences_appearence.xml
@@ -15,6 +15,12 @@
         android:summary="%s"
         app:iconSpaceReserved="false" />
     <CheckBoxPreference
+        android:defaultValue="false"
+        android:key="@string/pref_wallpaper"
+        android:summary="@string/init_summary_wallpaper"
+        android:title="@string/init_wallpaper"
+        app:iconSpaceReserved="false" />
+    <CheckBoxPreference
         android:defaultValue="true"
         android:key="@string/pref_showaddress"
         android:summary="@string/init_summary_address"
