centerCrop wallpaper on home screen (fix #12654)

--- a/main/res/layout/activity_bottom_navigation.xml
+++ b/main/res/layout/activity_bottom_navigation.xml
@@ -5,6 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
+
     <FrameLayout
         android:id="@+id/activity_content"
         android:layout_width="match_parent"
