--- a/main/res/menu/menu_ok_cancel.xml
+++ b/main/res/menu/menu_ok_cancel.xml
@@ -22,7 +22,7 @@
     <item
         android:id="@+id/menu_item_cancel"
         android:icon="@drawable/ic_menu_cancel"
-        android:title="@string/waypoint_cancel_edit"
+        android:title="@string/cancel"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction">
     </item>
