--- a/main/res/values/preference_keys.xml
+++ b/main/res/values/preference_keys.xml
@@ -480,6 +480,7 @@
     <string translatable="false" name="pref_renderthemefile">renderthemefile</string>
     <string translatable="false" name="pref_map_routing">map_routing</string>
     <string translatable="false" name="pref_theme_menu">theme_menu</string>
+    <string translatable="false" name="pref_google_map_theme">google_map_theme</string>
 
     <!-- pq/bookmark list: show downloadable/new only -->
     <string translatable="false" name="pref_pqShowDownloadableOnly">pqShowDownloadableOnly</string>
